tests/A1/tests/accept/accept_a1only/TypeCheck2.ul
void main(){
    int z;
    z = "this is a string";
}