tests/A1/tests/reject/semicolon.ul
void main(){
    int z;
    z = 2
}